Создано с помощью Colaboratory

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMBMA48lS4dd7AzS/2Bn9E9",
+      "authorship_tag": "ABX9TyO8d8BpQz8gLQ+k7QaDHs8l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -370,7 +370,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 382
+          "height": 293
         },
         "id": "kFGRQu9oQaK9",
         "outputId": "9316b6e1-4166-478a-9a06-fc30b4441e9d"
@@ -750,7 +750,9 @@
       "cell_type": "code",
       "source": [
         "directory = '/content/refseqs'\n",
-        "file_paths = [os.path.join(directory, file) for file in os.listdir(directory) if os.path.isfile(os.path.join(directory, file))]\n",
+        "file_paths = [os.path.join(directory, file)\n",
+        "              for file in os.listdir(directory)\n",
+        "              if os.path.isfile(os.path.join(directory, file))]\n",
         "\n",
         "protein_names_list = []\n",
         "\n",
@@ -761,22 +763,10 @@
         "print(unique_protein_names)"
       ],
       "metadata": {
-        "id": "rHXYjIs83Rag",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "f707b1ca-81fc-4540-de68-e63a337470f6"
+        "id": "rHXYjIs83Rag"
       },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['3a protein', '3b protein', '3c protein', '4a protein', '4b protein', '5a protein', '5b protein', 'E', 'E protein', 'LAP1C-like protein', 'M', 'M protein', 'Membrane protein', 'N', 'N protein', 'NS10 protein', 'NS3 protein', 'NS5a protein', 'NS5b protein', 'NS5c protein', 'NS6 protein', 'NS7 protein', 'NS7a protein', 'NS7b protein', 'NS7c protein', 'NS7d protein', 'NS8 protein', 'NS9 protein', 'ORF 10', 'ORF 1a', 'ORF 1a polyprotein', 'ORF 1ab polyprotein', 'ORF 3a', 'ORF 3b', 'ORF 5a', 'ORF 5b', 'ORF 5c', 'ORF 6', 'ORF 7', 'ORF 8', 'ORF 9', 'ORF1', 'ORF10', 'ORF10 protein', 'ORF11', 'ORF1a', 'ORF1a polyprotein', 'ORF1a protein', 'ORF1ab', 'ORF1ab polyprotein', 'ORF1ab protein', 'ORF1b', 'ORF1b polyprotein', 'ORF3', 'ORF3 protein', 'ORF3a protein', 'ORF4a', 'ORF4b', 'ORF5', 'ORF5a protein', 'ORF5b', 'ORF6', 'ORF6 protein', 'ORF7a', 'ORF7a protein', 'ORF7b', 'ORF8 protein', 'ORF8a', 'ORF8b', 'ORF9b', 'ORFx protein', 'Orf10', 'Orf11', 'Orf13', 'Orf14', 'Orf1ab', 'Orf3', 'Orf4', 'Orf7', 'Orf8', 'Orf9', 'Pol1', 'S', 'S protein', 'capsid', 'envelope', 'envelope protein', 'envelope small membrane protein', 'hemagglutinin-esterase', 'hemagglutinin-esterase glycoprotein', 'hemagglutinin-esterase protein', 'hypothetical protein', 'hypothetical protein ORF3', 'hypothetical protein ORF7', 'hypothetical protein ORFx', 'hypothetical protein ORFy', 'hypothetical protein orf7b', 'internal protein', 'matrix glycoprotein', 'matrix protein', 'membrane glycoprotein', 'membrane glycoprotein M', 'membrane protein', 'non-structural polyprotein', 'non-structural protein', 'non-structural protein 3', 'non-structural protein 3a', 'non-structural protein 3b', 'non-structural protein 3c', 'non-structural protein 7', 'non-structural protein 7a', 'non-structural protein NS2a', 'non-structural protein NS3', 'non-structural protein NS4', 'non-structural protein NS5', 'non-structural protein NS7a', 'non-structural protein NS7b', 'non-structural protein NS7c', 'nonstructural protein', 'nonstructural protein 2a', 'nonstructural protein 3', 'nonstructural protein 7', 'nonstructural protein NS3', 'nonstructural protein NS7', 'nonstructural protein NS8', 'ns12.9', 'ns2', 'nucleocapsid', 'nucleocapsid phosphoprotein', 'nucleocapsid phosphoprotein 2', 'nucleocapsid protein', 'nucleoprotein', 'orf1a polyprotein', 'orf1ab', 'orf1ab polyprotein', 'orf4a', 'orf4b', 'orf5', 'orf8b', 'pol protein', 'polyprotein', 'polyprotein 1a', 'polyprotein 1ab', 'protein 3', 'putative NS7a protein', 'putative NS7b protein', 'putative NS7c protein', 'putative ORF3', 'putative ORF4 protein', 'putative p10 protein', 'replicase', 'replicase 1AB', 'replicase polyprotein', 'replicase polyprotein 1a', 'replicase polyprotein 1ab', 'replicative polyprotein 1a', 'replicative polyprotein 1ab', 'small envelope E protein', 'small envelope protein', 'small membrane protein', 'small virion-associated protein', 'spike glycoprotein', 'spike protein', 'spike surface glycoprotein', 'surface glycoprotein', 'unknown']\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -830,7 +820,9 @@
       "cell_type": "code",
       "source": [
         "directory = '/content/refseqs'\n",
-        "file_paths = [os.path.join(directory, file) for file in os.listdir(directory) if os.path.isfile(os.path.join(directory, file))]\n",
+        "file_paths = [os.path.join(directory, file)\n",
+        "              for file in os.listdir(directory)\n",
+        "              if os.path.isfile(os.path.join(directory, file))]\n",
         "seq_names = []\n",
         "sequences = []\n",
         "for gb_file in file_paths:\n",
@@ -902,22 +894,10 @@
         "%cd /content"
       ],
       "metadata": {
-        "id": "4pGpr9sNBlVc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "959c01c1-06c4-4ace-b1c0-4a30beadd6ef"
+        "id": "4pGpr9sNBlVc"
       },
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -938,91 +918,18 @@
         "!mafft --auto /content/ref_sequences_nucleocapsid.fas > /content/ref_sequences_nucleocapsid_aln.fas"
       ],
       "metadata": {
-        "id": "j8y5T0cb6T2Q",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "192a4b36-8fb9-410d-a5d5-592d19604355"
+        "id": "j8y5T0cb6T2Q"
       },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "outputhat23=16\n",
-            "treein = 0\n",
-            "compacttree = 0\n",
-            "stacksize: 8192 kb\n",
-            "rescale = 1\n",
-            "All-to-all alignment.\n",
-            "tbfast-pair (aa) Version 7.490\n",
-            "alg=L, model=BLOSUM62, 2.00, -0.10, +0.10, noshift, amax=0.0\n",
-            "0 thread(s)\n",
-            "\n",
-            "outputhat23=16\n",
-            "Loading 'hat3.seed' ... \n",
-            "done.\n",
-            "Writing hat3 for iterative refinement\n",
-            "rescale = 1\n",
-            "Gap Penalty = -1.53, +0.00, +0.00\n",
-            "tbutree = 1, compacttree = 0\n",
-            "Constructing a UPGMA tree ... \n",
-            "   50 / 56\n",
-            "done.\n",
-            "\n",
-            "Progressive alignment ... \n",
-            "STEP    52 /55 \n",
-            "Reallocating..done. *alloclen = 2155\n",
-            "STEP    55 /55 \n",
-            "done.\n",
-            "tbfast (aa) Version 7.490\n",
-            "alg=A, model=BLOSUM62, 1.53, -0.00, -0.00, noshift, amax=0.0\n",
-            "1 thread(s)\n",
-            "\n",
-            "minimumweight = 0.000010\n",
-            "autosubalignment = 0.000000\n",
-            "nthread = 0\n",
-            "randomseed = 0\n",
-            "blosum 62 / kimura 200\n",
-            "poffset = 0\n",
-            "niter = 16\n",
-            "sueff_global = 0.100000\n",
-            "nadd = 16\n",
-            "Loading 'hat3' ... done.\n",
-            "rescale = 1\n",
-            "\n",
-            "   50 / 56\n",
-            "Segment   1/  1    1- 804\n",
-            "STEP 013-045-1  identical.   \n",
-            "Converged.\n",
-            "\n",
-            "done\n",
-            "dvtditr (aa) Version 7.490\n",
-            "alg=A, model=BLOSUM62, 1.53, -0.00, -0.00, noshift, amax=0.0\n",
-            "0 thread(s)\n",
-            "\n",
-            "\n",
-            "Strategy:\n",
-            " L-INS-i (Probably most accurate, very slow)\n",
-            " Iterative refinement method (<16) with LOCAL pairwise alignment information\n",
-            "\n",
-            "If unsure which option to use, try 'mafft --auto input > output'.\n",
-            "For more information, see 'mafft --help', 'mafft --man' and the mafft page.\n",
-            "\n",
-            "The default gap scoring scheme has been changed in version 7.110 (2013 Oct).\n",
-            "It tends to insert more gaps into gap-rich regions than previous versions.\n",
-            "To disable this change, add the --leavegappyregion option.\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Alignment trimming\n",
-        "!trimal/source/trimal -in /content/ref_sequences_nucleocapsid_aln.fas -out /content/ref_sequences_nucleocapsid_aln_trimm.fas -automated1"
+        "!trimal/source/trimal -in /content/ref_sequences_nucleocapsid_aln.fas \\\n",
+        "                      -out /content/ref_sequences_nucleocapsid_aln_trimm.fas \\\n",
+        "                      -automated1"
       ],
       "metadata": {
         "id": "SG4wM5rE6Tzb"
@@ -1063,12 +970,13 @@
         "    Run a function on a multi-fasta file.\n",
         "\n",
         "    Parameters:\n",
-        "    fasta_path (str): The path to the fasta file.\n",
-        "    function (Callable): The function to run on each sequence.\n",
-        "    params (Dict): A dictionary containing the parameters for the function.\n",
+        "    - fasta_path (str): The path to the fasta file.\n",
+        "    - function (Callable): The function to run on each sequence.\n",
+        "    - params (Dict): A dictionary containing the parameters for the function.\n",
         "\n",
         "    Returns:\n",
-        "    Dict[str, List[Tuple[int, int]]]: A dictionary where the keys are the sequence identifiers and the values are the results of the function for each sequence.\n",
+        "    Dict[str, List[Tuple[int, int]]]: A dictionary where the keys are the sequence\n",
+        "    identifiers and the values are the results of the function for each sequence.\n",
         "    \"\"\"\n",
         "    results = {}\n",
         "\n",
@@ -1109,7 +1017,8 @@
         "    - minimum_sequence_length (int, optional): Minimum length of a segment to consider. Defaults to 10.\n",
         "\n",
         "    Returns:\n",
-        "    - List[Tuple[int, int]]: A list of tuples representing the start and end positions of the predicted Z-DNA forming regions.\n",
+        "    List[Tuple[int, int]]: A list of tuples representing the start and end positions\n",
+        "    of the predicted Z-DNA forming regions.\n",
         "    \"\"\"\n",
         "\n",
         "    model.cuda()\n",
@@ -1171,7 +1080,8 @@
         "    - max_size (int): The maximum size for the ZHunt program. Default is 6.\n",
         "\n",
         "    Returns:\n",
-        "    List[Tuple[int, int]]: A list of tuples representing the start and end positions of the predicted Z-DNA forming regions.\n",
+        "    List[Tuple[int, int]]: A list of tuples representing the start and end positions\n",
+        "    of the predicted Z-DNA forming regions.\n",
         "    \"\"\"\n",
         "    # Ensure the sequence only contains valid DNA bases\n",
         "    # assert set(sequence).issubset({\"A\", \"C\", \"G\", \"T\", \"N\"}), \"Invalid DNA sequence\"\n",
@@ -1257,7 +1167,9 @@
       "source": [
         "# Convert and combine all reference sequences' GenBank files into one FASTA file\n",
         "directory = '/content/refseqs'\n",
-        "file_paths = [os.path.join(directory, file) for file in os.listdir(directory) if os.path.isfile(os.path.join(directory, file))]\n",
+        "file_paths = [os.path.join(directory, file)\n",
+        "              for file in os.listdir(directory)\n",
+        "              if os.path.isfile(os.path.join(directory, file))]\n",
         "with open('refseqs_all.fas', 'w') as fasta_out:\n",
         "    for gb_file in file_paths:\n",
         "        for record in SeqIO.parse(gb_file, \"genbank\"):\n",
@@ -1400,8 +1312,9 @@
         "    Returns:\n",
         "        None\n",
         "    \"\"\"\n",
+        "    term = f'txid{taxid}[organism:exp] AND biomol_genomic[prop] AND (\"25000\"[SLEN] : \"35000\"[SLEN])'\n",
         "    handle = Entrez.esearch(db=\"nuccore\",\n",
-        "                            term=f'txid{taxid}[organism:exp] AND biomol_genomic[prop] AND (\"25000\"[SLEN] : \"35000\"[SLEN])',\n",
+        "                            term=term,\n",
         "                            retmax=10000000)\n",
         "    record = Entrez.read(handle)\n",
         "    id_list = record[\"IdList\"]\n",
@@ -1433,8 +1346,9 @@
         "    Returns:\n",
         "        int: The count of GenBank entries associated with the taxid.\n",
         "    \"\"\"\n",
+        "    term = f'txid{taxid}[organism:exp] AND biomol_genomic[prop] AND (\"25000\"[SLEN] : \"35000\"[SLEN])'\n",
         "    handle = Entrez.esearch(db=\"nuccore\",\n",
-        "                            term=f'txid{taxid}[organism:exp] AND biomol_genomic[prop] AND (\"25000\"[SLEN] : \"35000\"[SLEN])',\n",
+        "                            term=term,\n",
         "                            retmax=100000000)\n",
         "    record = Entrez.read(handle)\n",
         "    return len(record[\"IdList\"])"
@@ -1477,12 +1391,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# Files dowloaded to github\n",
+        "# Files were uploaded to github\n",
         "\n",
         "# Filter out 'severe acute respiratory syndrome-related coronavirus' from the dataset and fetch others\n",
         "\n",
         "\n",
-        "# filtered_taxa_db = taxa_db[taxa_db[\"Species\"] != \"Severe acute respiratory syndrome-related coronavirus\"][\"Species\"].unique()\n",
+        "# Filter the DataFrame to get unique species values\n",
+        "# filtered_taxa_db = taxa_db[taxa_db[\"Species\"] != \"Severe acute respiratory syndrome-related coronavirus\"][\n",
+        "#     \"Species\"\n",
+        "# ].unique()\n",
+        "\n",
         "\n",
         "# for species in filtered_taxa_db:\n",
         "#     print(f\"Processing: {species}\")\n",
@@ -1570,7 +1488,9 @@
       "source": [
         "# Analyze Z-RNA regions and save results\n",
         "directory = '/content/species_gb_files'\n",
-        "file_paths = [os.path.join(directory, file) for file in os.listdir(directory) if os.path.isfile(os.path.join(directory, file))]\n",
+        "file_paths = [os.path.join(directory, file)\n",
+        "              for file in os.listdir(directory)\n",
+        "              if os.path.isfile(os.path.join(directory, file))]\n",
         "\n",
         "for file in file_paths:\n",
         "    virus_name = file.split('/')[3][:-3]\n",
@@ -1717,9 +1637,11 @@
     {
       "cell_type": "code",
       "source": [
-        "def plot_tree_with_annotations(newick: str, numeric_values: dict, taxa_db: pd.DataFrame, color_threshold: float = 0.9) -> None:\n",
+        "def plot_tree_with_annotations(newick: str, numeric_values: dict,\n",
+        "                               taxa_db: pd.DataFrame, color_threshold: float = 0.9) -> None:\n",
         "    \"\"\"\n",
-        "    Plot a tree with annotations using a Newick formatted string along with numeric values represented as a bar plot beside the dendrogram.\n",
+        "    Plot a tree with annotations using a Newick formatted string along with numeric values\n",
+        "    represented as a bar plot beside the dendrogram.\n",
         "\n",
         "    Parameters:\n",
         "    - newick (str): A Newick formatted string representation of the tree.\n",
@@ -1775,7 +1697,8 @@
         "            label = dict(zip((taxa_db['Species']), taxa_db['Accession']))[label]\n",
         "        box_width = numeric_values.get(label, 0)\n",
         "        color = label_color_mapping.get(label, \"grey\")\n",
-        "        ax2.add_patch(plt.Rectangle((0, y*(ax1.get_ylim()[1]/num_leaves) + 0.25*ax1.get_ylim()[1]/num_leaves), box_width, 8, facecolor=color))\n",
+        "        ax2.add_patch(plt.Rectangle((0, y*(ax1.get_ylim()[1]/num_leaves) + 0.25*ax1.get_ylim()[1]/num_leaves),\n",
+        "                                    box_width, 8, facecolor=color))\n",
         "\n",
         "    # Set limits for the middle subplot and hide its y-axis\n",
         "    ax2.set_xlim(0, max_width)\n",
@@ -1809,7 +1732,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 656
+          "height": 794
         },
         "id": "jY7BXk7IW45m",
         "outputId": "4e36013e-fb22-4138-8632-9952e4e02605"
@@ -1836,7 +1759,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 656
+          "height": 794
         },
         "id": "12pre4QzW42m",
         "outputId": "66e9cc0f-930b-43d4-eea8-267f36ea1c11"
