Создано с помощью Colaboratory

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO8d8BpQz8gLQ+k7QaDHs8l",
+      "authorship_tag": "ABX9TyN0aQwg2N+Mp8ASZPpgkXkc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1416,7 +1416,7 @@
       "metadata": {
         "id": "g8_eE9BnVEJC"
       },
-      "execution_count": null,
+      "execution_count": 152,
       "outputs": []
     },
     {
@@ -1440,12 +1440,14 @@
         "#     fetch_handle.close()\n",
         "\n",
         "# # Save sequences to a file\n",
-        "# SeqIO.write(sequences, \"/content/species_gb_files/Severe_acute_respiratory_syndrome_related_coronavirus.gbk\", \"genbank\")"
+        "# SeqIO.write(sequences,\n",
+        "#             \"/content/species_gb_files/Severe_acute_respiratory_syndrome_related_coronavirus.gbk\",\n",
+        "#             \"genbank\")"
       ],
       "metadata": {
         "id": "0Hpl3anyVEGX"
       },
-      "execution_count": null,
+      "execution_count": 151,
       "outputs": []
     },
     {
@@ -1511,9 +1513,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Download all files\n",
+        "# Download json files\n",
         "!zip -r /content/species_json_dnabert/species_json_dnaber.zip /content/species_json_dnabert\n",
-        "files.download(\"/content/conten.zip\")"
+        "files.download(\"/content/species_json_dnabert/species_json_dnaber.zip\")\n",
+        "\n",
+        "!zip -r /content/species_json_dnabert/species_json_dnaber.zip /content/species_json_dnabert\n",
+        "files.download(\"content/species_json_zhunt/species_json_zhunt.zip\")"
       ],
       "metadata": {
         "id": "fh6kIq2XVEAe"
