Создано с помощью Colaboratory

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -100,7 +100,7 @@
         "id": "ctRdkjFpve4U",
         "outputId": "e37860db-9524-4825-bff4-d965b907cd8a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
         "id": "A_uEqxsPwWbO",
         "outputId": "c2b2b8a7-8b4f-48bd-f380-6e37a904ea50"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +264,7 @@
       "metadata": {
         "id": "DIqZ5Pg7ewax"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -276,7 +276,7 @@
       "metadata": {
         "id": "Q9XQbj6Dog92"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -303,7 +303,7 @@
         "id": "1Y7Ke-0OllzN",
         "outputId": "7cb3ba18-670b-4a4d-8d75-b1a475d2cd6d"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,7 +343,7 @@
       "metadata": {
         "id": "DYAyh_hEPgLy"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -395,7 +395,7 @@
         "id": "kFGRQu9oQaK9",
         "outputId": "44abcec2-bc2a-4a42-baab-d17fabc753fe"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -718,7 +718,7 @@
       "metadata": {
         "id": "NMv1JlHf3r7c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -763,7 +763,7 @@
       "metadata": {
         "id": "3YlQeEah3Rdb"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -815,7 +815,7 @@
       "metadata": {
         "id": "1RvWAyaI3RXN"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -833,7 +833,7 @@
       "metadata": {
         "id": "5QHsMlqO3RUE"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -855,7 +855,7 @@
       "metadata": {
         "id": "EN6AdHvd3RQ5"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -872,7 +872,7 @@
         "id": "2uGng-UZ3RIw",
         "outputId": "57aedd74-959a-484c-80cc-71bafbbdb1b3"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -905,7 +905,7 @@
       "metadata": {
         "id": "CnhMIKYb3RFe"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -928,7 +928,7 @@
       "metadata": {
         "id": "6T2vuiTt6Rdw"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -954,7 +954,7 @@
       "metadata": {
         "id": "SG4wM5rE6Tzb"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1015,7 +1015,7 @@
       "metadata": {
         "id": "Oc9EZmsLO7o6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1079,7 +1079,7 @@
       "metadata": {
         "id": "22Nh5_ggDrzS"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1146,7 +1146,7 @@
       "metadata": {
         "id": "hPa2iQMyXZsu"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1162,7 +1162,7 @@
       "metadata": {
         "id": "AHrgoCvNDr5N"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1179,7 +1179,7 @@
       "metadata": {
         "id": "QGUdeFlADr13"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1198,7 +1198,7 @@
       "metadata": {
         "id": "Pz7QlhGET_Cq"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1214,7 +1214,7 @@
         "id": "bJzevYXrDrwp",
         "outputId": "95c84c6a-ad13-4e73-8358-d8343f21924f"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1238,7 +1238,7 @@
         "id": "7C8c6U0MZDkA",
         "outputId": "913d8646-c49b-4cd5-aee6-3392e88047fa"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1267,7 +1267,7 @@
       "metadata": {
         "id": "eHuRxi4GYroW"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1289,7 +1289,7 @@
       "metadata": {
         "id": "GBRi4o5tuK5S"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1305,7 +1305,7 @@
       "metadata": {
         "id": "OR2pb4-IDrtG"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1398,7 +1398,7 @@
       "metadata": {
         "id": "EosnqbaMVEOt"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1458,7 +1458,7 @@
       "metadata": {
         "id": "g8_eE9BnVEJC"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1568,7 +1568,7 @@
       "metadata": {
         "id": "fh6kIq2XVEAe"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1633,7 +1633,7 @@
       "metadata": {
         "id": "gjDkM3YFW5Ie"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1658,7 +1658,7 @@
       "metadata": {
         "id": "6iwZbcvvju5g"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1748,7 +1748,7 @@
       "metadata": {
         "id": "k-jUV40KwXZh"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1759,7 +1759,7 @@
       "metadata": {
         "id": "Q9irP9xjW4_W"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1771,7 +1771,7 @@
       "metadata": {
         "id": "UzFnuz5vjyrR"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1787,7 +1787,7 @@
         "id": "jY7BXk7IW45m",
         "outputId": "01869510-a144-42e4-e6a2-716efaa05a08"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1814,7 +1814,7 @@
         "id": "12pre4QzW42m",
         "outputId": "f7ac7c0c-3240-433f-c151-59dd8181dc97"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1938,7 +1938,75 @@
       "metadata": {
         "id": "FBfERWhcoYtT"
       },
-      "execution_count": 31,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def extract_regions_from_genbank_id(genbank_id: str) -> List[Tuple[str, int, int]]:\n",
+        "    \"\"\"\n",
+        "    Extract genomic regions including CDS (excluding \"ORF1ab polyprotein\" and \"ORF1a polyprotein\"),\n",
+        "    mat_peptides, and UTRs from a given GenBank ID.\n",
+        "\n",
+        "    Parameters:\n",
+        "    - genbank_id (str): The GenBank ID to fetch.\n",
+        "\n",
+        "    Returns:\n",
+        "    - List[Tuple[str, int, int]]: A list of tuples where each tuple contains:\n",
+        "      * The product name or region type (str).\n",
+        "      * The start coordinate (int).\n",
+        "      * The end coordinate (int).\n",
+        "\n",
+        "    Note:\n",
+        "    - Ensure you have an internet connection.\n",
+        "    - Replace the placeholder email with a valid one as NCBI requires it for API access.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    # Placeholder email for NCBI Entrez access\n",
+        "    Entrez.email = \"your.email@example.com\"\n",
+        "\n",
+        "    # Fetch the GenBank record\n",
+        "    handle = Entrez.efetch(db=\"nucleotide\", id=genbank_id, rettype=\"gb\", retmode=\"text\")\n",
+        "\n",
+        "    regions = []\n",
+        "\n",
+        "    for record in SeqIO.parse(handle, \"genbank\"):\n",
+        "        for feature in record.features:\n",
+        "\n",
+        "            # Extract CDS coordinates and product names\n",
+        "            if feature.type == \"CDS\":\n",
+        "                product = feature.qualifiers.get('product', ['unknown'])[0]\n",
+        "                if product not in [\"ORF1ab polyprotein\", \"ORF1a polyprotein\"]:\n",
+        "                    start = int(feature.location.start) + 1\n",
+        "                    end = int(feature.location.end)\n",
+        "                    regions.append((product, start, end))\n",
+        "\n",
+        "            # Extract mat_peptide coordinates and product names\n",
+        "            elif feature.type == \"mat_peptide\":\n",
+        "                start = int(feature.location.start) + 1\n",
+        "                end = int(feature.location.end)\n",
+        "                product = feature.qualifiers.get('product', ['unknown'])[0]\n",
+        "                regions.append((product, start, end))\n",
+        "\n",
+        "            # Extract UTR coordinates\n",
+        "            elif feature.type == \"5'UTR\" or feature.type == \"3'UTR\":\n",
+        "                start = int(feature.location.start) + 1\n",
+        "                end = int(feature.location.end)\n",
+        "                regions.append((feature.type, start, end))\n",
+        "\n",
+        "    handle.close()\n",
+        "\n",
+        "    # Remove duplicates and sort regions based on start coordinate\n",
+        "    regions = list(set(regions))\n",
+        "    regions.sort(key=lambda x: x[1])\n",
+        "\n",
+        "    return regions"
+      ],
+      "metadata": {
+        "id": "k2fQaYATW3b6"
+      },
+      "execution_count": 138,
       "outputs": []
     },
     {
@@ -2039,7 +2107,7 @@
       "metadata": {
         "id": "1s1wGu7Ck869"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2053,7 +2121,7 @@
       "metadata": {
         "id": "jrjU1VL2lQg7"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2149,7 +2217,7 @@
       "metadata": {
         "id": "pvKr-h5Kc5lz"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2161,7 +2229,7 @@
       "metadata": {
         "id": "tv9ROyXX9gfg"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
