Создано с помощью Colaboratory

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -1684,7 +1684,8 @@
         "    Parameters:\n",
         "        df (pd.DataFrame): The DataFrame to process.\n",
         "        column_names (list): A list of column names in which to check for outliers.\n",
-        "        multiplier (float): The multiplier for the IQR. Defaults to 1.5. Increase this value to be more lenient with outliers, and decrease it to be stricter.\n",
+        "        multiplier (float): The multiplier for the IQR. Defaults to 1.5.\n",
+        "        Increase this value to be more lenient with outliers, and decrease it to be stricter.\n",
         "\n",
         "    Returns:\n",
         "        pd.DataFrame: DataFrame with outliers removed.\n",
@@ -2546,41 +2547,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "DoXIAY2AVEDz"
-      },
-      "outputs": [],
-      "source": [
-        "# Analyze Z-RNA regions and save results\n",
-        "file_paths = list_files('/content/species_fasta_files/')\n",
-        "file_paths = ['/content/species_fasta_files/Human_coronavirus_OC43.fas']\n",
-        "for file in file_paths:\n",
-        "    virus_name = file.split('/')[3][:-4]\n",
-        "    zdnabert_refseq_intervals = process_fasta_with_function(file, run_zdnabert, ZDNABERT_PARAMS)\n",
-        "    with open(f\"/content/Coronaviridae strains predictions json/species_json_dnabert/zdnabert_{virus_name}.json\", 'w') as results_file:\n",
-        "        json.dump(zdnabert_refseq_intervals, results_file, cls=NumpyEncoder)\n",
-        "\n",
-        "    zhunt_refseq_intervals = process_fasta_with_function(file, run_zhunt, ZHUNT_PARAMS)\n",
-        "    with open(f\"/content/Coronaviridae strains predictions json/species_json_zhunt/zhunt_{virus_name}.json\", 'w') as results_file:\n",
-        "        json.dump(zhunt_refseq_intervals, results_file, cls=NumpyEncoder)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "zhunt_refseq_intervals = process_fasta_with_function(file, run_zhunt, ZHUNT_PARAMS)\n",
-        "with open(f\"/content/species_json_zhunt/zhunt_{virus_name}.json\", 'w') as results_file:\n",
-        "    json.dump(zhunt_refseq_intervals, results_file, cls=NumpyEncoder)"
-      ],
-      "metadata": {
-        "id": "xImiQiL3_Ck1"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "PwfTntXLA59_"
       },
       "outputs": [],
@@ -2979,8 +2945,15 @@
     {
       "cell_type": "code",
       "source": [
-        "joint_meta_df['ZDNABERT Mean interval length'] = joint_meta_df['ZDNABERT intervals total length']/joint_meta_df['ZDNABERT intervals number']\n",
-        "joint_meta_df['ZHUNT Mean interval length'] = joint_meta_df['ZHUNT intervals total length']/joint_meta_df['ZHUNT intervals number']"
+        "joint_meta_df['ZDNABERT Mean interval length'] = (\n",
+        "    joint_meta_df['ZDNABERT intervals total length'] /\n",
+        "    joint_meta_df['ZDNABERT intervals number']\n",
+        ")\n",
+        "\n",
+        "joint_meta_df['ZHUNT Mean interval length'] = (\n",
+        "    joint_meta_df['ZHUNT intervals total length'] /\n",
+        "    joint_meta_df['ZHUNT intervals number']\n",
+        ")"
       ],
       "metadata": {
         "id": "567sQydpd4CC"
@@ -4968,13 +4941,6 @@
       "collapsed_sections": [
         "l65vm4ZcO7_4",
         "u09GKBtwhzC7",
-        "PfbiPt86INqS",
-        "gLLCbzQCMu5y",
-        "za_gPJH6fWjB",
-        "ixyCw_oueyKK",
-        "jQf3ylhllQ1K",
-        "I-zjsnBqOz23",
-        "09qwH05EJGeG",
         "0Upnx9IXPxi4"
       ],
       "provenance": [],
